Began classes for Generators
Smaller Changes:
Fixed Chat Message
Prevented player from joining team if already on a team
Added a method to get the name of the team with a color

--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,5 @@ processResources {
 
 task copyJar(type: Copy) {
     from file("${buildDir}/libs/eggwars-1.0.jar")
-    into file("C:/Users/Ryan/Documents/MinecraftServers/Paper-1.16.5/plugins")
+    into file("C:/Users/Ryan/Documents/MinecraftServers/Eggwars/plugins")
 }
