Finished IslandGenerator, MiddleGenerator needs a nametag
Fixed ChatFormatter spacing
Added tabcompleter for spawning generators as well as its own command
Generators now properly cancel
Created command to clear items

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,9 @@ commands:
   
   eggwars:
     description: Various commands for eggwars.
+    
+  gen:
+    description: Creates a generator.
+    
+  eggtool:
+    description: Random tools.
