Updates and bug fixes + more bugs smil

--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,12 @@ plugins {
 group = 'com.ryan'
 version = '1.0'
 
-sourceCompatibility = '1.16'
-targetCompatibility = '1.16'
 
 repositories {
     mavenCentral()
     maven {
-        name = 'papermc-repo'
-        url = 'https://papermc.io/repo/repository/maven-public/'
+        name = 'paper'
+        url = uri("https://papermc.io/repo/repository/maven-public/")
     }
     maven {
         name = 'sonatype'
@@ -23,18 +21,15 @@ repositories {
 }
 
 dependencies {
-    compileOnly 'io.papermc.paper:paper-api:1.17-R0.1-SNAPSHOT'
-}
-
-processResources {
-    setDuplicatesStrategy(DuplicatesStrategy.INCLUDE)
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [version: version]
-    }
+    compileOnly("io.papermc.paper:paper-api:1.18.2-R0.1-SNAPSHOT")
 }
 
 task copyJar(type: Copy) {
     dependsOn(build)
     from file("${buildDir}/libs/EggWars-1.0.jar")
     into file("C:/Users/Ryan/Documents/MinecraftServers/Eggwars/plugins")
+}
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
 }
