--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: EggWars
-version: @version@
+version: 1.18
 main: com.ryan.eggwars.EggWars
-api-version: 1.17
+api-version: 1.18
 author: Ryan
 description: idk a game for kings
 
